--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -17,6 +17,9 @@
     "jsx-loader": "^0.13.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1",
+    "redux-devtools": "^3.1.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
