--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -14,12 +14,17 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "fetch-to-json": "^1.0.0",
+    "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
+    "net": "^1.0.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "redux-devtools": "^3.1.1",
+    "redux-thunk": "^2.0.1",
+    "sockjs-client": "^1.0.3",
+    "stompjs": "^2.3.3",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
